<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="pager" type="id"/>
    <item name="last_match" type="id"/>
    <item name="next_match" type="id"/>
    <item name="favorites_match" type="id"/>
    <item name="bottom_layout" type="id"/>
    <item name="date_match" type="id"/>
    <item name="badge_home" type="id"/>
    <item name="home_team" type="id"/>
    <item name="home_score" type="id"/>
    <item name="away_score" type="id"/>
    <item name="away_team" type="id"/>
    <item name="badge_away" type="id"/>
    <item name="swipe_refresh" type="id"/>
    <item name="empty_view" type="id"/>
    <item name="list_match" type="id"/>
</resources>